# bettingapp

./: .gitignore  commands.md  pyproject.toml
bettingapp/: auth.py  bets_functions.py  bets_sheet.py  cell_inserting.py  help_funcs.py  main.py  math.py  sheet_funcs.py  user_inputs.py
tests/: test_bettingapp.py
