[tool.poetry]
name = "bettingapp"
version = "0.1.0"
description = ""
authors = ["ybrlap <ybringdrive@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
pytest = "^7.1.1"
gspread = "^5.3.0"
oauth2client = "^4.1.3"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
